<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryDarkBlue"
  android:id="@+id/base_layout_login">

  <ImageView
      android:id="@+id/iv_logoBase"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:contentDescription=""
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/logo" />

  <EditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:hint="@string/et_username"
      android:inputType="textEmailAddress"
      android:singleLine="true"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/iv_logoBase"
      android:textColorHint="@color/white"
      android:backgroundTint="@color/white"
      tools:targetApi="o"
      android:textCursorDrawable="@drawable/et_bot_line"/>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/et_password_lay"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/et_password"
      android:textColorHint="@color/white"
      android:theme="@style/EditScreenTextInputLayoutStyle"
      app:hintAnimationEnabled="false"
      app:hintEnabled="false"
      app:layout_constraintEnd_toEndOf="@id/et_email"
      app:layout_constraintStart_toStartOf="@id/et_email"
      app:layout_constraintTop_toBottomOf="@id/et_email"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/white">

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:hint="@string/et_password"
        android:inputType="textPassword|textWebPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/et_bot_line"
        android:textSize="18sp"
        tools:targetApi="o" />
  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:id="@+id/ll_buttons"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="@id/et_password_lay"
    app:layout_constraintStart_toStartOf="@id/et_password_lay"
    app:layout_constraintTop_toBottomOf="@id/et_password_lay">

    <Button
      android:id="@+id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      android:background="@drawable/general_background"
      android:text="@string/btn_login"
      android:textColor="@color/white" />

  </LinearLayout>

  <ProgressBar
      android:id="@+id/progressBar_login"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />

  <TextView
    android:id="@+id/tv_forget_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/tv_forgot_password"
    android:textColor="@color/white"
    app:layout_constraintStart_toStartOf="@id/et_password_lay"
      app:layout_constraintEnd_toEndOf="@id/et_password_lay"
    app:layout_constraintTop_toBottomOf="@id/ll_buttons" />
</androidx.constraintlayout.widget.ConstraintLayout>